Fix app settings wrapping on mobile devices

--- a/educhemlp.client/src/pages/app/Administration.scss
+++ b/educhemlp.client/src/pages/app/Administration.scss
@@ -228,4 +228,13 @@
             }
         }
     }
+
+    .appsettings-tab {
+        flex-direction: column;
+        gap: 48px;
+
+        .appsettings {
+            max-width: 100%;
+        }
+    }
 }
